--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -2,7 +2,7 @@
 	--web-view-name: Main Page;
 	--web-view-id: Main_Page;
 	--web-scale-to-fit: true;
-	--web-scale-to-fit-type: fit;
+	--web-scale-to-fit-type: width;
 	--web-scale-on-double-click: true;
 	--web-center-horizontally: true;
 	--web-enable-deep-linking: true;
@@ -18,14 +18,14 @@
 }
 .Main_Page_Class {
 	position: absolute;
-	width: 1366px;
-	height: 625px;
+	width: 1349px;
+	height: 738px;
 	background-color: rgba(255,255,255,1);
 	overflow: hidden;
 	--web-view-name: Main Page;
 	--web-view-id: Main_Page;
 	--web-scale-to-fit: true;
-	--web-scale-to-fit-type: fit;
+	--web-scale-to-fit-type: width;
 	--web-scale-on-double-click: true;
 	--web-center-horizontally: true;
 	--web-enable-deep-linking: true;
@@ -43,7 +43,7 @@
 	overflow: visible;
 	position: absolute;
 	width: 378px;
-	height: 533px;
+	height: 646px;
 	left: 0px;
 	top: 92px;
 	transform: matrix(1,0,0,1,0,0);
@@ -84,14 +84,14 @@
 	width: 96px;
 	height: 70px;
 	left: 0px;
-	top: 555px;
+	top: 668px;
 	overflow: visible;
 }
 .Component_5__1_Class {
 	position: absolute;
 	width: 224px;
 	height: 46px;
-	left: 918px;
+	left: 904.335px;
 	top: 46px;
 	overflow: visible;
 }
@@ -116,7 +116,7 @@
 	position: absolute;
 	width: 224px;
 	height: 46px;
-	left: 1142px;
+	left: 1125px;
 	top: 46px;
 	overflow: visible;
 }
@@ -141,7 +141,7 @@
 	position: absolute;
 	width: 224px;
 	height: 46px;
-	left: 918px;
+	left: 904.335px;
 	top: 0px;
 	overflow: visible;
 }
@@ -166,7 +166,7 @@
 	position: absolute;
 	width: 224px;
 	height: 46px;
-	left: 1142px;
+	left: 1125px;
 	top: 0px;
 	overflow: visible;
 }
@@ -188,7 +188,7 @@
 	top: 0px;
 }
 .Data_Parser_Class {
-	left: 973px;
+	left: 959.778px;
 	top: 8px;
 	position: absolute;
 	overflow: visible;
@@ -219,7 +219,7 @@
 }
 .CREATORS_Class {
 	left: 90px;
-	top: 133px;
+	top: 159px;
 	position: absolute;
 	overflow: visible;
 	width: 199px;
