--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -19,7 +19,7 @@
 .Main_Page_Class {
 	position: absolute;
 	width: 1349px;
-	height: 1253px;
+	height: 1486px;
 	background-color: rgba(255,255,255,1);
 	overflow: hidden;
 	--web-view-name: Main Page;
@@ -29,24 +29,6 @@
 	--web-scale-on-double-click: true;
 	--web-center-horizontally: true;
 	--web-enable-deep-linking: true;
-}
-.Path_1_Class {
-	fill: rgba(80,76,142,1);
-	stroke: rgba(243,199,46,1);
-	stroke-width: 5px;
-	stroke-linejoin: round;
-	stroke-linecap: butt;
-	stroke-miterlimit: 4;
-	shape-rendering: auto;
-}
-.Path_1 {
-	overflow: visible;
-	position: absolute;
-	width: 388px;
-	height: 534.433px;
-	left: 27px;
-	top: 111px;
-	transform: matrix(1,0,0,1,0,0);
 }
 .Rectangle_9_Class {
 	fill: rgba(13,19,113,1);
@@ -83,8 +65,8 @@
 	position: absolute;
 	width: 96px;
 	height: 70px;
-	left: 0px;
-	top: 1183px;
+	left: 18px;
+	top: 1396px;
 	overflow: visible;
 }
 .Component_5__1_Class {
@@ -209,7 +191,7 @@
 	top: 0px;
 	overflow: visible;
 }
-.favicon-96x96_v_Class {
+.favicon-96x96_u_Class {
 	position: absolute;
 	width: 96px;
 	height: 96px;
@@ -217,8 +199,44 @@
 	top: 0px;
 	overflow: visible;
 }
+.Path_2_Class {
+	fill: rgba(80,76,142,1);
+	stroke: rgba(243,199,46,1);
+	stroke-width: 5px;
+	stroke-linejoin: round;
+	stroke-linecap: butt;
+	stroke-miterlimit: 4;
+	shape-rendering: auto;
+}
+.Path_2 {
+	overflow: visible;
+	position: absolute;
+	width: 388px;
+	height: 534.433px;
+	left: 923px;
+	top: 111px;
+	transform: matrix(1,0,0,1,0,0);
+}
+.Path_3_Class {
+	fill: rgba(80,76,142,1);
+	stroke: rgba(243,199,46,1);
+	stroke-width: 5px;
+	stroke-linejoin: round;
+	stroke-linecap: butt;
+	stroke-miterlimit: 4;
+	shape-rendering: auto;
+}
+.Path_3 {
+	overflow: visible;
+	position: absolute;
+	width: 388px;
+	height: 534.433px;
+	left: 486px;
+	top: 111px;
+	transform: matrix(1,0,0,1,0,0);
+}
 .NEWS_Class {
-	left: 161px;
+	left: 620px;
 	top: 122px;
 	position: absolute;
 	overflow: visible;
@@ -232,7 +250,7 @@
 	color: rgba(243,199,46,1);
 }
 .-_Data_parser_is_on_the_way_Class {
-	left: 48px;
+	left: 507px;
 	top: 166px;
 	position: absolute;
 	overflow: visible;
@@ -246,7 +264,7 @@
 	color: rgba(243,199,46,1);
 }
 .-_Brayden_is_still_confused_Class {
-	left: 48px;
+	left: 507px;
 	top: 206px;
 	position: absolute;
 	overflow: visible;
@@ -260,7 +278,7 @@
 	color: rgba(243,199,46,1);
 }
 .-_Official_release_of_Pineappl_Class {
-	left: 48px;
+	left: 507px;
 	top: 246px;
 	position: absolute;
 	overflow: visible;
@@ -271,5 +289,122 @@
 	font-style: normal;
 	font-weight: normal;
 	font-size: 24px;
+	color: rgba(243,199,46,1);
+}
+.-_Carrots_are_better_than_ever_Class {
+	left: 507px;
+	top: 315px;
+	position: absolute;
+	overflow: visible;
+	width: 300px;
+	white-space: nowrap;
+	text-align: left;
+	font-family: MS Reference Sans Serif;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 24px;
+	color: rgba(243,199,46,1);
+}
+.Path_5_Class {
+	fill: rgba(80,76,142,1);
+	stroke: rgba(243,199,46,1);
+	stroke-width: 5px;
+	stroke-linejoin: round;
+	stroke-linecap: butt;
+	stroke-miterlimit: 4;
+	shape-rendering: auto;
+}
+.Path_5 {
+	overflow: visible;
+	position: absolute;
+	width: 388px;
+	height: 534.433px;
+	left: 48px;
+	top: 111px;
+	transform: matrix(1,0,0,1,0,0);
+}
+.Path_6_Class {
+	fill: rgba(80,76,142,1);
+	stroke: rgba(243,199,46,1);
+	stroke-width: 5px;
+	stroke-linejoin: round;
+	stroke-linecap: butt;
+	stroke-miterlimit: 4;
+	shape-rendering: auto;
+}
+.Path_6 {
+	overflow: visible;
+	position: absolute;
+	width: 388px;
+	height: 534.433px;
+	left: 486px;
+	top: 685px;
+	transform: matrix(1,0,0,1,0,0);
+}
+.Path_7_Class {
+	fill: rgba(80,76,142,1);
+	stroke: rgba(243,199,46,1);
+	stroke-width: 5px;
+	stroke-linejoin: round;
+	stroke-linecap: butt;
+	stroke-miterlimit: 4;
+	shape-rendering: auto;
+}
+.Path_7 {
+	overflow: visible;
+	position: absolute;
+	width: 388px;
+	height: 534.433px;
+	left: 48px;
+	top: 685px;
+	transform: matrix(1,0,0,1,0,0);
+}
+.Path_8_Class {
+	fill: rgba(80,76,142,1);
+	stroke: rgba(243,199,46,1);
+	stroke-width: 5px;
+	stroke-linejoin: round;
+	stroke-linecap: butt;
+	stroke-miterlimit: 4;
+	shape-rendering: auto;
+}
+.Path_8 {
+	overflow: visible;
+	position: absolute;
+	width: 388px;
+	height: 534.433px;
+	left: 924px;
+	top: 685px;
+	transform: matrix(1,0,0,1,0,0);
+}
+.Rectangle_15_Class {
+	fill: rgba(80,76,142,1);
+	stroke: rgba(243,199,46,1);
+	stroke-width: 5px;
+	stroke-linejoin: miter;
+	stroke-linecap: butt;
+	stroke-miterlimit: 4;
+	shape-rendering: auto;
+}
+.Rectangle_15 {
+	position: absolute;
+	overflow: visible;
+	width: 1349px;
+	height: 127px;
+	left: 0px;
+	top: 1359px;
+}
+.Created_by_Simon_Hall_and_Bray_Class {
+	left: 18px;
+	top: 1449px;
+	position: absolute;
+	overflow: visible;
+	width: 289px;
+	white-space: nowrap;
+	text-align: left;
+	font-family: MS Reference Sans Serif;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
 	color: rgba(243,199,46,1);
 }
